# ccdb

./: README.md
.github/workflows/: CMake_GitHub_Action.yml
python_snips/: overview.py  proxy.py
src/: CMakeLists.txt  ccdb.cpp  command.readline  commandTemplateTree.cpp  configure.sh  exec.cpp  general_info_pulling.cpp  key_raw.cpp  main.cpp  mihomo.cpp  tui.cpp
src/NonCMake/: ncurses.cmake
src/NonCMake/ncurses-6.5/package/: mingw-ncurses.nsi
src/include/: ccdb.h  colors.h  commandTemplateTree.h  exec.h  general_info_pulling.h  glogger.h  log.h  mihomo.h  tui.h  utils.h
src/misc/: color.cpp  execute.cpp  utils.cpp
src/script/: gen_header.sh  update.sh
toolchains/armv5l-linux-musl-cross/armv5l-linux-musleabi/lib/: libatomic.la  libatomic.so.1.2.0  libgcc_s.so.1  libgfortran.la  libgomp.la  libgomp.so.1.0.0  libitm.la  libitm.so.1.0.0  libssp.la  libssp.so.0.0.0  libssp_nonshared.la  libstdc++.la  libstdc++.so.6.0.29-gdb.py  libstdc++fs.la  libsupc++.la
toolchains/armv5l-linux-musl-cross/armv5l-linux-musleabi/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xce  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdce  armelf_linux_eabi.xde  armelf_linux_eabi.xdw  armelf_linux_eabi.xdwe  armelf_linux_eabi.xe  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsce  armelf_linux_eabi.xse  armelf_linux_eabi.xsw  armelf_linux_eabi.xswe  armelf_linux_eabi.xw  armelf_linux_eabi.xwe  armelfb_linux_eabi.x  armelfb_linux_eabi.xbn  armelfb_linux_eabi.xc  armelfb_linux_eabi.xce  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdc  armelfb_linux_eabi.xdce  armelfb_linux_eabi.xde  armelfb_linux_eabi.xdw  armelfb_linux_eabi.xdwe  armelfb_linux_eabi.xe  armelfb_linux_eabi.xn  armelfb_linux_eabi.xs  armelfb_linux_eabi.xsc  armelfb_linux_eabi.xsce  armelfb_linux_eabi.xse  armelfb_linux_eabi.xsw  armelfb_linux_eabi.xswe  armelfb_linux_eabi.xw  armelfb_linux_eabi.xwe
toolchains/armv7-unknown-linux-musleabi/: build.log.bz2  toolchain.cmake
toolchains/armv7-unknown-linux-musleabi/armv7-unknown-linux-musleabi/lib/: libatomic.so.1  libatomic.so.1.2.0  libgcc_s.so.1  libitm.so.1  libitm.so.1.0.0  libitm.spec  libstdc++.modules.json  libstdc++.so.6  libstdc++.so.6.0.34  libstdc++.so.6.0.34-gdb.py
toolchains/armv7-unknown-linux-musleabi/armv7-unknown-linux-musleabi/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xce  armelf_linux_eabi.xcer  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdce  armelf_linux_eabi.xdcer  armelf_linux_eabi.xde  armelf_linux_eabi.xder  armelf_linux_eabi.xdw  armelf_linux_eabi.xdwe  armelf_linux_eabi.xdwer  armelf_linux_eabi.xe  armelf_linux_eabi.xer  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsce  armelf_linux_eabi.xscer  armelf_linux_eabi.xse  armelf_linux_eabi.xser  armelf_linux_eabi.xsw  armelf_linux_eabi.xswe  armelf_linux_eabi.xswer  armelf_linux_eabi.xw  armelf_linux_eabi.xwe  armelf_linux_eabi.xwer  armelfb_linux_eabi.x  armelfb_linux_eabi.xbn  armelfb_linux_eabi.xc  armelfb_linux_eabi.xce  armelfb_linux_eabi.xcer  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdc  armelfb_linux_eabi.xdce  armelfb_linux_eabi.xdcer  armelfb_linux_eabi.xde  armelfb_linux_eabi.xder  (+18 more)
toolchains/armv7-unknown-linux-musleabi/armv7-unknown-linux-musleabi/sysroot/lib/: libatomic.so.1.2.0  libgcc_s.so.1  libitm.so.1.0.0  libstdc++.so.6.0.34-gdb.py
toolchains/armv7-unknown-linux-musleabi/lib/: libcc1.so.0.0.0
toolchains/armv7-unknown-linux-musleabi/share/: armv7-unknown-linux-musleabi-ct-ng.config.bz2
toolchains/armv7hf-unknown-linux-musleabihf/: build.log.bz2  toolchain.cmake
toolchains/armv7hf-unknown-linux-musleabihf/armv7-unknown-linux-musleabihf/lib/: libatomic.so.1  libatomic.so.1.2.0  libgcc_s.so.1  libitm.so.1  libitm.so.1.0.0  libitm.spec  libstdc++.modules.json  libstdc++.so.6  libstdc++.so.6.0.34  libstdc++.so.6.0.34-gdb.py
toolchains/armv7hf-unknown-linux-musleabihf/armv7-unknown-linux-musleabihf/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xce  armelf_linux_eabi.xcer  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdce  armelf_linux_eabi.xdcer  armelf_linux_eabi.xde  armelf_linux_eabi.xder  armelf_linux_eabi.xdw  armelf_linux_eabi.xdwe  armelf_linux_eabi.xdwer  armelf_linux_eabi.xe  armelf_linux_eabi.xer  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsce  armelf_linux_eabi.xscer  armelf_linux_eabi.xse  armelf_linux_eabi.xser  armelf_linux_eabi.xsw  armelf_linux_eabi.xswe  armelf_linux_eabi.xswer  armelf_linux_eabi.xw  armelf_linux_eabi.xwe  armelf_linux_eabi.xwer  (+29 more)
toolchains/armv7hf-unknown-linux-musleabihf/lib/: libcc1.so.0.0.0
toolchains/armv7hf-unknown-linux-musleabihf/share/: armv7-unknown-linux-musleabihf-ct-ng.config.bz2
toolchains/i586-unknown-linux-musl/: build.log.bz2  toolchain.cmake
toolchains/i586-unknown-linux-musl/i586-unknown-linux-musl/lib/: libatomic.so.1  libatomic.so.1.2.0  libgcc_s.so.1  libitm.so.1  libitm.so.1.0.0  libitm.spec  libstdc++.modules.json  libstdc++.so.6  libstdc++.so.6.0.34  libstdc++.so.6.0.34-gdb.py
toolchains/i586-unknown-linux-musl/lib/: libcc1.so.0.0.0
toolchains/i586-unknown-linux-musl/share/: i586-unknown-linux-musl-ct-ng.config.bz2
(+180 files in other folders)
